Fixed bug of background overflow

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -17,6 +17,7 @@
 
 	body
 	{
+		overflow-x: hidden !important;
 	}
 
 	h2, h3, h4, h5, h6
